--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@100;200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700&display=swap');
 
+/* -----------------------------Colours */
+
+.bg-color-name-title {
+  background-color: #676767;
+}
+
+/* -----------------------------Heading */
+
 header {
   margin: 0; 
+}
+
+.heading {
+  margin-left: 50px; 
 }
 
 .logo {
@@ -10,4 +22,21 @@ header {
   transition: all .5s ease-in-out;
   -moz-transition: all .5s ease-in-out;
   -webkit-transition: all .5s ease-in-out;
+}
+
+.name {
+  color: #fff; 
+  font-family: 'Exo', sans-serif;
+  font-size: 46px; 
+  font-weight: 100;
+  margin-top: 50px;
+}
+
+.title {
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 28px;
+  font-weight: 200;
+  margin-bottom: 90px;
+  margin-top: 20px;
 }
