--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,3 +68,33 @@ header {
   font-size: 14px;
   padding: 0; 
 }
+
+.menuitem {
+  height: 120px; 
+  padding: 0; 
+  text-align: center;
+}
+
+.menuitem a {
+  color: #fff; 
+  height: 120px; 
+  text-decoration: none;
+  width: 100%; 
+}
+
+.menuitem a i {
+  color: #fafafa;
+  display: block;
+  font-size: 26px;
+  padding-top: 22px;
+}
+
+.menuitem span {
+  display: block;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 2px;
+  padding-top: 5px;
+  text-align: center;
+  width: 100%;
+}
