--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@
 .ui-menu-color-download {
   background-color: #525252;
 }
+
 /* -----------------------------Heading */
 
 header {
@@ -101,4 +102,11 @@ header {
   padding-top: 5px;
   text-align: center;
   width: 100%;
+}
+
+/* -----------------------------Hover.css */
+
+.hvr-sweep-to-bottom:before {
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 120px; 
 }
