--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@ h4 {
   font-weight: 300;
 }
 
+.inline-block {
+  display: inline-block;
+}
+
 /* -----------------------------Heading */
 
 header {
