--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,3 +157,27 @@ footer {
 .cv-pdf i:hover {
   color: #e84610;
 }
+
+.social-links {
+  padding-bottom: 15px;
+}
+
+.social-links li a i {
+  background: #8f8f8f; 
+  border-radius: 50%;
+  color: #fafafa;
+  font-size: 13px;
+  height: 32px;
+  line-height: 7px; 
+  padding: 12px 0;
+  text-align: center;
+  transition: all 0.35s ease-in-out;
+  -moz-transition: all 0.35s ease-in-out;
+  -webkit-transition: all 0.35s ease-in-out;
+  -o-transition: all 0.35s ease-in-out;
+  width: 32px;
+}
+
+.social-links li a i:hover {
+  background: #e84610;
+}
