--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,10 @@
   background-color: #525252;
 }
 
+.bg-color-three-reasons {
+  background-color: #fff;
+}
+
 /* -----------------------------Special paddings/margins/text */
 
 h1, 
@@ -43,6 +47,23 @@ h4 {
 
 .inline-block {
   display: inline-block;
+}
+
+.row-table {
+  display: table; 
+}
+
+.section-column {
+  display: table-cell;
+  float: none;
+  padding: 0 30px 30px;
+}
+
+.section-heading {
+  font-family: 'Exo', sans-serif;
+  font-weight: 300;
+  margin-bottom: 40px;
+  margin-top: 25px;
 }
 
 /* -----------------------------Heading */
