--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,3 +206,13 @@ footer {
 #footer-details {
   padding: 20px; 
 }
+
+/* -----------------------------Three Reasons */
+
+.three-reasons-icon {
+  color: #e67e22; 
+}
+
+.three-reasons-heading {
+  margin-bottom: 15px;
+}
