--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,3 +220,38 @@ footer {
 .three-reasons-heading {
   margin-bottom: 15px;
 }
+
+/* -----------------------------Personal Info */
+
+.personal-info-item {
+  clear: both; 
+  display: block; 
+  margin-bottom: 20px;
+}
+
+.personal-info-item .key, 
+.personal-info-item .value {
+  display: inline-block;
+  padding-right: 8px;
+}
+
+.personal-info-item .key p, 
+.personal-info-item .value p {
+  margin: 0; 
+}
+
+.personal-info-item .key {
+  margin-right: 21px;
+  padding-top: 2px;
+  vertical-align: top;
+  width: 30%;
+}
+
+.personal-info-item .key p {
+  font-weight: 700;
+}
+
+.personal-info-item .value {
+  position: relative;
+  width: 60%; 
+}
