--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,10 @@
   background-color: #9b59b6;
 }
 
+.bg-color-contact {
+  background-color: #fff;
+}
+
 /* -----------------------------Special paddings/margins/text */
 
 h1, 
@@ -328,4 +332,36 @@ footer {
 
 .history-items {
   margin-bottom: 30px;
+}
+
+/* -----------------------------Contact Form */
+
+.contact-heading {
+  font-family: 'Exo', sans-serif;
+  font-weight: 300;
+  margin-bottom: 20px;
+  margin-top: 25px;
+}
+
+.center-form {
+  margin: 0 auto;
+  max-width: 70%;
+  padding-top: 10px;
+}
+
+button[type="submit"] {
+  background-color: #e84610;
+  color: #fafafa;
+  margin-bottom: 20px;
+  margin-top: 15px;
+}
+
+/* -----------------------------Media Queries */
+
+@media(min-width: 992px) {
+  .center-form {
+    max-width: 50%;
+    min-height: 240px;
+    padding-top: 10px;
+  }
 }
